--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\IBRAHEEM\\.virtualenvs\\blog-5tKo-_aa\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\IBRAHEEM\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
